--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style type=""text/css>
-    @import url ("/css/style.css");
+    @import url ("/style.css");
     </style>
     <title>BIO</title>
 
