--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style type=""text/css>
+    <style type="text/css">
     @import url ("/style.css");
     </style>
     <title>BIO</title>
