--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <head>
 <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style type="text/css">
-    @import url ("/style.css");
-    </style>
+    <link rel="stylesheet" href="style.css" />
     <title>BIO</title>
 
 <body>
