--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p class="sub2">@MARK0V_CHAIN @M0N7E_CARL0</p>
     </div>
     <div class="corps">
-      <a class="link" target="_blank" href="http://eigen-lab.net/profile">프로필 및 성향</a>
+      <a class="link" target="_blank" href="http://eigen-lab.net/avo/bbs/board.php?bo_table=bio&&page=1&#c_2">프로필 및 성향</a>
         <a class="link" target="_blank" href="http://eigen-lab.net">홈페이지</a>
         <a class="link" target="_blank" href="http://isotope14.postype.com">장르계 별관<br>(postype)</a>
         <a class="link" target="_blank" href="https://vereinigt-euch.tistory.com">동인 페이지<br>(tistory)</a>
